src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .header-link {
        @apply font-semibold py-4 text-primary dark:text-primary;
    }
    .header-link svg{
        @apply fill-primary;
    }
    .btn-header {
        @apply font-semibold bg-primary text-secondary px-6 text-center flex justify-center items-center rounded-lg py-3;
    }
    .btn-full {
        @apply flex items-center text-lg bg-primary text-secondary rounded-full text-center py-3 px-12 font-bold transition-colors duration-150 ease-in-out;
    }
    .btn-full a:hover{
        /* @apply font-semibold bg-primary text-secondary px-6 text-center flex justify-center items-center rounded-lg py-3; */
    }
    .btn-outline {
        @apply flex items-center text-lg bg-secondary text-primary border-primary border-[1px] rounded-full text-center py-3 px-12 font-bold transition-colors duration-150 ease-in-out;
    }
    .btn-outline a:hover{
        @apply font-semibold bg-primary text-secondary px-6 text-center flex justify-center items-center rounded-lg py-3;
    }
    .sec_heading{
        @apply text-2xl text-primary font-medium;
    }
    .features h3{
        @apply bg-primary_bg text-primary text-sm py-2 rounded-full px-7 font-medium
    }
    .footer h4{
        @apply text-[#F3FCF1] opacity-50 font-light text-base
    }
    .footer a{
        @apply text-[#F3FCF1] font-thin text-base
    }
    .footer .links{
        @apply flex flex-col gap-2
    }
    .footer h4{
        @apply mb-3
    }
}

